--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     /* padding: 13px 13px; */
     /* text-align: center; */
     width: 100%;
+    border: none;
 }
 .parentDrinkContainer div h2{
     margin: 12px auto;
@@ -20,6 +21,11 @@
     width:100%;
    
 }
+.nav-item:hover
+{
+    color:grey;
+}
+
 
 .parentDrinkContainer div
 {
@@ -36,3 +42,10 @@ img
 {
     border-radius: 5%;
 }
+ .nav
+{
+    border-bottom: .5px solid rgb(177, 177, 177);
+} 
+/* .alcoholFilter div > *:hover{
+    color: grey;
+} */
