--- a/style.css
+++ b/style.css
@@ -46,6 +46,27 @@ img
 {
     border-bottom: .5px solid rgb(177, 177, 177);
 } 
-/* .alcoholFilter div > *:hover{
-    color: grey;
-} */
+
+
+
+@media only screen and (max-width: 600px) {
+    .parentDrinkContainer div p
+    {
+        display:none;
+    }
+   .parentDrinkContainer {
+    
+    flex-flow: column;
+   }
+   .parentDrinkContainer img{
+   
+        max-width: 50%;
+        height: auto;
+       
+        margin: 0 auto;
+   }
+
+}
+  
+  @media only screen and (max-width: 768px) {
+  }
