--- a/style.css
+++ b/style.css
@@ -46,8 +46,15 @@ img
 {
     border-bottom: .5px solid rgb(177, 177, 177);
 } 
-
-
+.pumpSet ul
+{
+   list-style: none;
+}
+.pumpSet ul li
+{
+    display: flex;
+    justify-content: space-between;
+}
 
 @media only screen and (max-width: 600px) {
     .parentDrinkContainer div p
