added fix to ingredient modal

--- a/style.css
+++ b/style.css
@@ -55,6 +55,12 @@ img
     display: flex;
     justify-content: space-between;
 }
+.ingredients div
+{
+    display: flex;
+    justify-content: space-between;
+}
+
 
 @media only screen and (max-width: 600px) {
     .parentDrinkContainer div p
