--- a/style.css
+++ b/style.css
@@ -61,6 +61,11 @@ img
     justify-content: space-between;
 }
 
+.ingredients div select
+{
+    width:200px;
+}
+
 
 @media only screen and (max-width: 600px) {
     .parentDrinkContainer div p
